--- a/myshop/shop/static/css/pdf.css
+++ b/myshop/shop/static/css/pdf.css
@@ -1,66 +1,60 @@
-/* Общие стили */
 body {
-    font-family: "Helvetica Neue", sans-serif; /* Лучшая поддержка для мобильных устройств */
-    color: #222;
-    line-height: 1.5;
+    font-family:Helvetica, sans-serif;
+    color:#222;
+    line-height:1.5;
 }
 
 table {
-    width: 100%;
-    border-collapse: collapse; /* Убирает двойные линии между ячейками */
-    margin: 20px 0;
+    width:100%;
+    border-spacing:0;
+    border-collapse: collapse;
+    margin:20px 0;
 }
 
 table th, table td {
-    text-align: left;
-    font-size: 14px;
-    padding: 10px;
-    margin: 0;
+    text-align:left;
+    font-size:14px;
+    padding:10px;
+    margin:0;
 }
 
 tbody tr:nth-child(odd) {
-    background: #efefef;
+    background:#efefef;
 }
 
 thead th, tbody tr.total {
-    background: #5993bb;
-    color: #fff;
-    font-weight: bold;
+    background:#5993bb;
+    color:#fff;
+    font-weight:bold;
 }
 
 h1 {
-    margin: 0;
+    margin:0;
 }
 
-/* Второстепенное оформление */
+
 .secondary {
-    color: #bbb;
-    margin-bottom: 20px;
+    color:#bbb;
+    margin-bottom:20px;
 }
 
-/* Выравнивание чисел по правой стороне */
 .num {
-    text-align: right;
+    text-align:right;
 }
 
-/* Состояния: оплачено/в ожидании */
 .paid, .pending {
-    border: 4px solid; /* Чтобы рамки были одинаковой толщины */
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 22px;
-    padding: 4px 12px 0;
-    float: right;
+    color:#1bae37;
+    border:4px solid #1bae37;
+    text-transform:uppercase;
+    font-weight:bold;
+    font-size:22px;
+    padding:4px 12px 0px;
+    float:right;
     transform: rotate(-15deg);
-    margin-right: 40px;
-}
-
-.paid {
-    color: #1bae37;
-    border-color: #1bae37;
+    margin-right:40px;
 }
 
 .pending {
-    color: #a82d2d;
-    border-color: #a82d2d;
+    color:#a82d2d;
+    border:4px solid #a82d2d;
 }
