--- a/myshop/shop/templates/shop/product/list.html
+++ b/myshop/shop/templates/shop/product/list.html
@@ -25,14 +25,15 @@
   Products
  {% endif %}</h1>
  {% for product in products %}
- <div class="item">
- <a href="{{ product.get_absolute_url }}">
- <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
- </a>
- <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
- <br>
- ${{ product.price }}
- </div>
- {% endfor %}
+    <div class="item">
+        <a href="{{ product.get_absolute_url }}">
+            <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}" alt="{{ product.name }}">
+        </a>
+        <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
+        <br>
+        ${{ product.price }}
+    </div>
+{% endfor %}
+
  </div>
 {% endblock %}
