--- a/education/courses/static/css/base.css
+++ b/education/courses/static/css/base.css
@@ -48,10 +48,10 @@ h1 {
 }
 
 #header {
-    background: #4dcc43;
+    background: #2F4F4F;
     overflow: auto;
-    padding: 10px 20px;
-    border-bottom: 6px solid #3fad37;
+    padding: 20px 20px;
+    border-bottom: 6px solid #696969;
 }
 
 #header .logo {
@@ -178,7 +178,7 @@ select {
 
 input[type=submit], a.button {
      border-radius:5px;
-     background:#4dcc43;
+     background:#2F4F4F;
      color:#fff;
      font-size:16px;
      text-transform:uppercase;
